# rosalia

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/scripts/: inspect_model_simple.py
assets/shaders/: compile.bat
assets/shaders/spv/: gemm_f16_f16.spv  gemm_f16_f16_affine.spv  gemm_f16_f16_affine_relu2.spv  gemm_f16_f16_affine_tanh.spv  gemm_f16_f16_relu2.spv  gemm_f16_f16_tanh.spv  gemm_f16_f32.spv  gemm_f16_f32_affine.spv  gemm_f16_f32_affine_relu2.spv  gemm_f16_f32_affine_tanh.spv  gemm_f16_f32_relu2.spv  gemm_f16_f32_tanh.spv  gemm_f32_f16.spv  gemm_f32_f16_affine.spv  gemm_f32_f16_affine_relu2.spv  gemm_f32_f16_affine_tanh.spv  gemm_f32_f16_relu2.spv  gemm_f32_f16_tanh.spv  gemm_f32_f32.spv  gemm_f32_f32_affine.spv  gemm_f32_f32_affine_relu2.spv  gemm_f32_f32_affine_tanh.spv  gemm_f32_f32_relu2.spv  gemm_f32_f32_tanh.spv  gemv_f16_f16.spv  gemv_f16_f16_affine.spv  gemv_f16_f16_affine_relu2.spv  gemv_f16_f16_affine_tanh.spv  gemv_f16_f16_relu2.spv  gemv_f16_f16_tanh.spv  gemv_f16_f32.spv  gemv_f16_f32_affine.spv  gemv_f16_f32_affine_relu2.spv  gemv_f16_f32_affine_tanh.spv  gemv_f16_f32_relu2.spv  gemv_f16_f32_tanh.spv  gemv_f32_f16.spv  gemv_f32_f16_affine.spv  gemv_f32_f16_affine_relu2.spv  gemv_f32_f16_affine_tanh.spv  (+32 more)
assets/shaders/src/: gemm.comp  gemv.comp  norm.comp  token_shift.comp
docs/: format.md  rosa.md  style.md
src/: app.rs  asset.rs  layout.rs  main.rs  num.rs  sam.rs
src/benchmark/: coop.rs  gemm.rs  gemv.rs  ln.rs  mod.rs  norm.rs  token_shift.rs
