[package]
edition = "2024"
name = "rosalia"
version = "0.1.0"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
exr = "1.7"
fastrand = "2.3"
flume = "0.12"
half = { version = "2.7", features = ["bytemuck"] }
itertools = "0.14"
log = "0.4"
memmap2 = "0.9"
nonmax = "0.5.5"
rayon = { version = "1.11", optional = true }
rust-embed = { version = "8", features = ["include-exclude"] }
safetensors = "0.7"
serde = { version = "1", features = ["derive", "rc"], optional = true }
serde_bytes = { version = "0.11", optional = true }
simplelog = "0.12"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
variant_count = "1.2"
vulkanalia = { version = "0.34", features = ["libloading"] }

[dependencies.derive_more]
features = [
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "from",
    "into",
]
version = "2.1"

[features]
correctness = []
